        DragonFlyBSD which has no more compatibility link at
        /usr/bin/perl since recently.

        Fix issues reported by default perlcritic. (Patch by Alex
        Muntada, thanks!)

        Add repology package list badges to README.markdown.

        Switch bug tracker from rt.cpan.org to GitHub as rt.cpan.org
        is going away.

0.09    2015-08-18 02:23:22+0200

        Replace Modern::Perl with "use 5.010;" + strict and warnings.
        Drop perlcritic.rc.

        Add release test to verify 5.010 compatibility (for now).

        Polish README a little bit.

        Move release tests to xt/release and drop %ENV checking code.

        Require Test::Warnings >= 0.005 for "warnings".

        Replace individual xt/release/kwalitee.t with
        Dist::Zilla::Plugin::Test::Kwalitee

0.08    2014-09-11 16:57:00+02:00

        Fix dist.ini to exclude emacs style backup files (except in
        the test data directory) as well as the cover_db.

        Hack around RT#66485 to be able to use done_testing() together
        with Test::NoWarnings. Also fixes number of skipped tests in
        t/basic-functionality.t on non-debianoid platforms.

        Fix Author vs Release test in t/manifest.t's skip message.

        Only run t/changes.t if $RELEASE_TESTING is set.

        Update t/win-*.t skip messages to in line with the others.

        Add a Test::Kwalitee based test.

0.07    2014-09-10 00:33:03+02:00

        Add test that the change log conforms to CPAN::Changes::Spec.

        Convert dates in change log to conform with
        CPAN::Changes::Spec.

        Require CPAN::Changes >= 0.23 for running the test suite.

        Switch to Dist::Zilla (with ExtUtils::MakeMaker) instead of
        Module::Build. Remove convenience Makefile.

        Fix Perl::Critic warning "Don't modify $_ in list functions"

        Consider Modern::Perl as ok for
        Perl::Critic::Policy::TestingAndDebugging::RequireUseStrict
